# nishida-math

./: .gitignore  .zenodo.json  02 simspec kether nishida.md  CITATION.cff  LICENSE  Makefile  README.md  RESULTS.md  pyproject.toml
.github/workflows/: test.yml
archive/S1_lp_classical_evaluator/: chatgpts1.md
archive/S2_letterless_normal_form/: gemini-s2.md
archive/S7_wp6_lean_instantiation/: README.md  chatgpt.md
archive/S8_wp6_lp_truth_predicate/: chatgpt.md
archive/T1_gl_prover/: chatgpt.md  gemini.md  grok.md
archive/T1_gl_prover/chatgpt_zip_extracted/gl_prover_submission/: pyproject.toml
archive/T1_gl_prover/chatgpt_zip_extracted/gl_prover_submission/src/gl/: countermodel_verifier.py  formula.py  kripke_search.py  tableau.py
archive/T1_gl_prover/chatgpt_zip_extracted/gl_prover_submission/tests/: test_gl_random.py
archive/T1_gl_prover/grok_zip_extracted/: pyproject.toml
archive/T1_gl_prover/grok_zip_extracted/src/gl/: countermodel_verifier.py  formula.py  kripke_search.py  tableau.py
archive/T1_gl_prover/grok_zip_extracted/tests/: test_gl_kats.py  test_gl_random.py
archive/T2_fixed_point/: ChatGPT.md  gemini.md  grok.md
archive/T3_con_n_induction/: chatgpt.md  gemini.md  grok.md
docs/integration_notes/: S1_lp_classical_evaluator.md  S2_letterless_normal_form.md  T1_gl_prover.md  T2_fixed_point.md  T3_con_n_induction.md  wp3_ladder_figure.md  (+4 more)
instruction0615/: README.md  S7_wp6_lean_instantiation.md  wp6_survey.md
instructions20260615/: I1_e_a3_implementation.md  I2_how_many_stages.md  README.md
prompts/: README.md
tests/: test_con_n_consistency.py  test_con_n_normal_form.py  test_con_n_strict.py  test_e_a3.py  test_e_c1.py  test_gl_kats.py  test_headline.py  test_ladder.py  test_letterless_random.py
(+153 files in other folders)
