[project]
name = "generative-contradiction"
version = "0.3.0"
description = "Computational exhibit of generative vs inert contradiction (GL prover, LP/classical evaluators, hierarchy experiments)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.2",
  "hypothesis>=6.100",
  "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gl", "src/lp", "src/classical"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
